// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ScrollTrack correctly 1`] = `
.emotion-6 {
  overflow: hidden;
  position: relative;
}

.emotion-1 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  left: 8px;
}

@media (max-width:767px) {
  .emotion-1 {
    display: none;
  }
}

.emotion-1:hover {
  background-color: #177D05;
}

.emotion-1:active {
  background-color: #177D05;
}

.emotion-1:focus {
  background-color: #177D05;
}

.emotion-0 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
  font-size: 20px;
}

.emotion-3 {
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
  -webkit-transform: translate3d(0px,0,0);
  -ms-transform: translate3d(0px,0,0);
  transform: translate3d(0px,0,0);
  white-space: nowrap;
  position: relative;
}

@media (max-width:767px) {
  .emotion-3 {
    left: inherit;
    overflow-x: scroll;
    display: block;
    -ms-overflow-style: none;
    overflow: -moz-scrollbars-none;
    webkit-overflow-scrolling: touch;
  }
}

.emotion-5 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  right: 8px;
}

@media (max-width:767px) {
  .emotion-5 {
    display: none;
  }
}

.emotion-5:hover {
  background-color: #177D05;
}

.emotion-5:active {
  background-color: #177D05;
}

.emotion-5:focus {
  background-color: #177D05;
}

<div>
  <div
    className="emotion-6"
    onKeyDown={[Function]}
  >
    <button
      aria-label="back"
      className="emotion-1"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
    <div
      className="emotion-3"
    >
      <div
        className="emotion-2"
      >
        <p>
          one
        </p>
        <p>
          two
        </p>
        <p>
          three
        </p>
        <p>
          four
        </p>
        <p>
          five
        </p>
        <p>
          six
        </p>
        <p>
          seven
        </p>
      </div>
    </div>
    <button
      aria-label="next"
      className="emotion-5"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
  </div>
</div>
`;

exports[`renders ScrollTrack with animation props correctly 1`] = `
.emotion-6 {
  overflow: hidden;
  position: relative;
}

.emotion-1 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  left: 8px;
}

@media (max-width:767px) {
  .emotion-1 {
    display: none;
  }
}

.emotion-1:hover {
  background-color: #177D05;
}

.emotion-1:active {
  background-color: #177D05;
}

.emotion-1:focus {
  background-color: #177D05;
}

.emotion-0 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
  font-size: 20px;
}

.emotion-5 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  right: 8px;
}

@media (max-width:767px) {
  .emotion-5 {
    display: none;
  }
}

.emotion-5:hover {
  background-color: #177D05;
}

.emotion-5:active {
  background-color: #177D05;
}

.emotion-5:focus {
  background-color: #177D05;
}

.emotion-3 {
  -webkit-transition: -webkit-transform 1000ms ease-in;
  -webkit-transition: transform 1000ms ease-in;
  transition: transform 1000ms ease-in;
  -webkit-transform: translate3d(0px,0,0);
  -ms-transform: translate3d(0px,0,0);
  transform: translate3d(0px,0,0);
  white-space: nowrap;
  position: relative;
}

@media (max-width:767px) {
  .emotion-3 {
    left: inherit;
    overflow-x: scroll;
    display: block;
    -ms-overflow-style: none;
    overflow: -moz-scrollbars-none;
    webkit-overflow-scrolling: touch;
  }
}

<div>
  <div
    className="emotion-6"
    onKeyDown={[Function]}
  >
    <button
      aria-label="back"
      className="emotion-1"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
    <div
      className="emotion-3"
    >
      <div
        className="emotion-2"
      >
        <p>
          one
        </p>
        <p>
          two
        </p>
        <p>
          three
        </p>
        <p>
          four
        </p>
        <p>
          five
        </p>
        <p>
          six
        </p>
        <p>
          seven
        </p>
      </div>
    </div>
    <button
      aria-label="next"
      className="emotion-5"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
  </div>
</div>
`;

exports[`renders ScrollTrack without children correctly 1`] = `<div />`;

exports[`renders custom ScrollTrack buttons correctly 1`] = `
.emotion-5 {
  overflow: hidden;
  position: relative;
}

.emotion-3 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
  font-size: 20px;
}

.emotion-2 {
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
  -webkit-transform: translate3d(0px,0,0);
  -ms-transform: translate3d(0px,0,0);
  transform: translate3d(0px,0,0);
  white-space: nowrap;
  position: relative;
}

@media (max-width:767px) {
  .emotion-2 {
    left: inherit;
    overflow-x: scroll;
    display: block;
    -ms-overflow-style: none;
    overflow: -moz-scrollbars-none;
    webkit-overflow-scrolling: touch;
  }
}

.emotion-0 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  left: 8px;
  background-color: red;
}

@media (max-width:767px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-0:hover {
  background-color: #177D05;
}

.emotion-0:active {
  background-color: #177D05;
}

.emotion-0:focus {
  background-color: #177D05;
}

.emotion-4 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  right: 8px;
  background-color: blue;
}

@media (max-width:767px) {
  .emotion-4 {
    display: none;
  }
}

.emotion-4:hover {
  background-color: #177D05;
}

.emotion-4:active {
  background-color: #177D05;
}

.emotion-4:focus {
  background-color: #177D05;
}

<div>
  <div
    className="emotion-5"
    onKeyDown={[Function]}
  >
    <button
      aria-label="back"
      className="emotion-0"
      onClick={[Function]}
    >
      HI
    </button>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-1"
      >
        <p>
          one
        </p>
        <p>
          two
        </p>
        <p>
          three
        </p>
        <p>
          four
        </p>
        <p>
          five
        </p>
        <p>
          six
        </p>
        <p>
          seven
        </p>
      </div>
    </div>
    <button
      aria-label="next"
      className="emotion-4"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-3"
      >
        
      </i>
    </button>
  </div>
</div>
`;
